--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Teams</ion-title>
   </ion-navbar>
 
@@ -14,5 +14,10 @@
 
 
 <ion-content padding>
-
+  <button ion-item (click)="itemTapped()">
+      HC Elite
+  </button>
+  <button ion-item (click)="itemTapped()">
+      Team Takeover
+  </button>
 </ion-content>
