--- a/src/pages/tournaments/tournaments.html
+++ b/src/pages/tournaments/tournaments.html
@@ -6,13 +6,21 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>Tournaments</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Select a Tournament</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <button (click)="navigate()">Back</button>
+  <!-- <button (click)="navigate()">Back</button> -->
+  <ion-list>
+    <button ion-item (click)="itemTapped()">
+        March Madness Tournament
+    </button>
+    <button ion-item (click)="itemTapped()">
+        Summer Showdown
+    </button>
+  </ion-list>
 </ion-content>
