--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -14,10 +14,7 @@
 
 
 <ion-content padding>
-  <button ion-item (click)="itemTapped()">
-      HC Elite
-  </button>
-  <button ion-item (click)="itemTapped()">
-      Team Takeover
+  <button ion-item (click)="itemTapped($event, team)" *ngFor="let team of teams">
+      {{team.name}}
   </button>
 </ion-content>
