--- a/src/pages/standings/standings.html
+++ b/src/pages/standings/standings.html
@@ -1,11 +1,9 @@
 <!--
-  Generated template for the TeamDetail page.
+  Generated template for the Standings page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
-
 <ion-header>
 
   <ion-navbar>
@@ -15,5 +13,5 @@
 
 
 <ion-content padding>
-  <h2>Team Detail</h2>
+  <h2>Standings</h2>
 </ion-content>
