--- a/src/pages/team-home/team-home.html
+++ b/src/pages/team-home/team-home.html
@@ -8,6 +8,11 @@
 
   <ion-navbar color="primary">
     <ion-title>TeamHome {{team.name}}</ion-title>
+    <ion-buttons end>
+      <button (click)="goHome()">
+        <ion-icon name="home"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
