--- a/src/pages/tournaments/tournaments.html
+++ b/src/pages/tournaments/tournaments.html
@@ -16,11 +16,8 @@
 <ion-content padding>
   <!-- <button (click)="navigate()">Back</button> -->
   <ion-list>
-    <button ion-item (click)="itemTapped()">
-        March Madness Tournament
-    </button>
-    <button ion-item (click)="itemTapped()">
-        Summer Showdown
+    <button ion-item (click)="itemTapped($event, tournament)" *ngFor="let tournament of tournaments">
+        {{tournament.name}}
     </button>
   </ion-list>
 </ion-content>
