--- a/src/pages/my-teams/my-teams.page.html
+++ b/src/pages/my-teams/my-teams.page.html
@@ -13,5 +13,5 @@
 <ion-content padding>
   <p>You are not currently following any teams.</p>
   <p>First select a tournament, then you can follow teams from their team page.</p>
-  <button (click)="goToTournaments()">Find a Tournament</button>
+  <button ion-button (click)="goToTournaments()">Find a Tournament</button>
 </ion-content>
