--- a/src/pages/team-detail/team-detail.html
+++ b/src/pages/team-detail/team-detail.html
@@ -15,7 +15,12 @@
 
 
 <ion-content padding>
-  <h2>Team Detail</h2>
-  <h3>Name: {{team.name}}</h3>
+  <ion-list>
+    <ion-item *ngFor="let game of games" (click)="gameClicked($event, game)">
+      {{game.opponent}}
+    </ion-item>
+  </ion-list>
+  <!-- <h2>Team Detail</h2>
+  <h3>Name: {{team.name}}</h3> -->
   <!-- <button (click)="goHome()">goHome</button> -->
 </ion-content>
