--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -14,7 +14,13 @@
 
 
 <ion-content padding>
-  <button ion-item (click)="itemTapped($event, team)" *ngFor="let team of teams">
-      {{team.name}}
-  </button>
+  <ion-list>
+    <ion-item-group *ngFor="let division of teams">
+      <ion-item-divider color="secondary">{{division.divisionName}}</ion-item-divider>
+      <button ion-item (click)="itemTapped($event, team)" *ngFor="let team of division.divisionTeams">
+        {{team.name}}
+      </button>
+    </ion-item-group>
+  </ion-list>
+
 </ion-content>
