--- a/src/pages/my-teams/my-teams.page.html
+++ b/src/pages/my-teams/my-teams.page.html
@@ -11,10 +11,37 @@
 </ion-header>
 
 <ion-content padding>
-  <!-- <p>You are not currently following any teams.</p>
-  <p>First select a tournament, then you can follow teams from their team page.</p> -->
+  <ion-card *ngIf="!favorites">
+    <ion-card-header>No Followed Teams</ion-card-header>
+    <ion-card-content>
+      <p>You are not currently following any teams.</p>
+      <p>First select a tournament, then you can follow teams from their team page.</p>
+      <button round outline full ion-button (click)="goToTournaments()">
+        <ion-icon name="search"></ion-icon>
+        Find a Tournament
+      </button>
+    </ion-card-content>
+  </ion-card>
 
-  <ion-list>
+  <ion-card *ngIf="favorites">
+    <ion-list>
+      <ion-list-header>Followed Teams</ion-list-header>
+      <button ion-item *ngFor="let item of favorites" (click)="favoriteTapped($event, item)">
+        <ion-icon name='star'></ion-icon>
+        {{item.team.name}}
+        <p>{{item.tournamentName}}</p>
+      </button>
+    </ion-list>
+    <ion-card-content>
+      <p>To follow more teams, select a tournament, then you can follow teams from their team page</p>
+      <button round outline full ion-button (click)="goToTournaments()">
+        <ion-icon name="search"></ion-icon>
+        Find a Tournament
+      </button>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- <ion-list>
     <ion-list-header>Followed Teams</ion-list-header>
     <button ion-item *ngFor="let item of favorites" (click)="favoriteTapped($event, item)">
       <ion-icon name='star'></ion-icon>
@@ -28,7 +55,7 @@
   <button round outline full ion-button (click)="goToTournaments()">
     <ion-icon name="search"></ion-icon>
     Find a Tournament
-  </button>
+  </button> -->
   <!-- opciones de button: full, round, outline, clear, small -->
 
   <!-- <ion-fab top right edge>
