Components: Custom CSS

--- a/src/pages/my-teams/my-teams.page.html
+++ b/src/pages/my-teams/my-teams.page.html
@@ -12,7 +12,7 @@
 
 <ion-content padding>
   <ion-card *ngIf="!favorites">
-    <ion-card-header>No Followed Teams</ion-card-header>
+    <ion-card-header class="my-teams-header">No Followed Teams</ion-card-header>
     <ion-card-content>
       <p>You are not currently following any teams.</p>
       <p>First select a tournament, then you can follow teams from their team page.</p>
@@ -25,7 +25,7 @@
 
   <ion-card *ngIf="favorites">
     <ion-list>
-      <ion-list-header>Followed Teams</ion-list-header>
+      <ion-list-header class="my-teams-header">Followed Teams</ion-list-header>
       <button ion-item *ngFor="let item of favorites" (click)="favoriteTapped($event, item)">
         <ion-icon name='star'></ion-icon>
         {{item.team.name}}
